* Fix: A NPE was fixed which occurred when updating or creating a node list which included elements which could not be found. (CL-358)
* Fix: A typo within the search model document for users was fixed.
       The property emailadress was renamed to emailaddress. 

=== 0.6.4 - 24.03.2016

* Enhancement: The mesh ui was updated.

=== 0.6.5 - 05.04.2016

* Fix: The displayField value was missing within the node search document. The value was added.
* Fix: The changelog execution information was added to the demo data dump and thus no further changelog execution will happen during mesh demo startup.
* Fix: An edge case that could cause multiple stack overflow exception was fixed.
* Enhancement: A Cache-Control: no-cache header has been set to mesh responses.
* Enhancement: The mesh-ui was updated.
* Fix: Various search index related bugs have been fixed.
* Enhancement: The mesh-ui configuration file was renamed to mesh-ui.config.js 

=== 0.6.6 - 06.04.2016

* Public open beta release
* Fix: A bug within the reindex changelog entry was fixed. The bug prevented the node index to be recreated.
* Fix: The mesh-ui-config.js default apiUrl parameter was changed to /api/v1 in order to allow access from hosts other than localhost.

=== 0.6.7 - 25.04.2016

* Fix: Update checker. A bug that prevented the update checker from working correctly was fixed.

=== 0.6.8 - 26.04.2016

* Enhancement: The mesh-ui was updated.
* Enhancement: OrientDB was updated to version 2.1.16

=== 0.6.9 - 

* Enhancement: It is now possible to also include non-container nodes in a navigation response using the includeAll parameter. By default only container nodes will be included in the response.  

=== Upcoming changes

* Versioning for nodes
  A future mesh version will also support versioning of nodes.

* Java REST Client
  A Rest client which supports RXJava will be added.

* Clustering support